semantic/y.output
状态 177 conflicts: 1 shift/reduce


语法

    0 $accept: program_stmt $end

    1 program_stmt: program_head routine DOT

    2 program_head: PROGRAM NAME SEMI

    3 routine: routine_head routine_body

    4 sub_routine: routine_head routine_body

    5 routine_head: label_part const_part type_part var_part routine_part

    6 label_part: %empty

    7 const_part: CONST const_expr_list
    8           | %empty

    9 const_expr_list: const_expr_list NAME EQUAL const_value SEMI
   10                | NAME EQUAL const_value SEMI

   11 const_value: INTEGER
   12            | REAL
   13            | CHAR
   14            | STRING
   15            | SYS_CON

   16 type_part: TYPE type_decl_list
   17          | %empty

   18 type_decl_list: type_decl_list type_definition
   19               | type_definition

   20 type_definition: NAME EQUAL type_decl SEMI

   21 type_decl: simple_type_decl
   22          | array_type_decl
   23          | record_type_decl

   24 simple_type_decl: SYS_TYPE
   25                 | NAME
   26                 | LP name_list RP
   27                 | const_value DOTDOT const_value
   28                 | MINUS const_value DOTDOT const_value
   29                 | MINUS const_value DOTDOT MINUS const_value
   30                 | NAME DOTDOT NAME

   31 array_type_decl: ARRAY LB simple_type_decl RB OF type_decl

   32 record_type_decl: RECORD field_decl_list END

   33 field_decl_list: field_decl_list field_decl
   34                | field_decl

   35 field_decl: name_list COLON type_decl SEMI

   36 name_list: name_list COMMA NAME
   37          | NAME

   38 var_part: VAR var_decl_list
   39         | %empty

   40 var_decl_list: var_decl_list var_decl
   41              | var_decl

   42 var_decl: name_list COLON type_decl SEMI

   43 routine_part: %empty
   44             | routine_decl_list

   45 routine_decl_list: function_decl
   46                  | procedure_decl
   47                  | function_decl routine_decl_list
   48                  | procedure_decl routine_decl_list

   49 function_decl: function_head SEMI sub_routine SEMI

   50 function_head: FUNCTION NAME parameters COLON simple_type_decl

   51 procedure_decl: procedure_head SEMI sub_routine SEMI

   52 procedure_head: PROCEDURE NAME parameters

   53 parameters: LP para_decl_list RP
   54           | %empty

   55 para_decl_list: para_decl_list SEMI para_type_list
   56               | para_type_list

   57 para_type_list: var_para_list COLON simple_type_decl

   58 var_para_list: VAR name_list
   59              | name_list

   60 routine_body: compound_stmt

   61 compound_stmt: BEGIN_TOKEN stmt_list END

   62 stmt_list: stmt_list stmt SEMI
   63          | %empty

   64 stmt: INTEGER COLON non_label_stmt
   65     | non_label_stmt

   66 non_label_stmt: assign_stmt
   67               | proc_stmt
   68               | compound_stmt
   69               | if_stmt
   70               | repeat_stmt
   71               | while_stmt
   72               | for_stmt
   73               | case_stmt
   74               | goto_stmt

   75 assign_stmt: NAME ASSIGN expression
   76            | NAME LB expression RB ASSIGN expression
   77            | NAME DOT NAME ASSIGN expression

   78 proc_stmt: NAME
   79          | NAME LP args_list RP
   80          | SYS_PROC
   81          | SYS_PROC LP expression_list RP
   82          | READ LP factor RP

   83 if_stmt: IF expression THEN stmt
   84        | IF expression THEN stmt ELSE stmt

   85 repeat_stmt: REPEAT stmt_list UNTIL expression

   86 while_stmt: WHILE expression DO stmt

   87 for_stmt: FOR NAME ASSIGN expression direction expression DO stmt

   88 direction: TO
   89          | DOWNTO

   90 case_stmt: CASE expression OF case_expr_list END

   91 case_expr_list: case_expr_list case_expr
   92               | case_expr

   93 case_expr: const_value COLON stmt SEMI
   94          | NAME COLON stmt SEMI

   95 goto_stmt: GOTO INTEGER

   96 expression_list: expression_list COMMA expression
   97                | expression

   98 expression: expression GE expr
   99           | expression GT expr
  100           | expression LE expr
  101           | expression LT expr
  102           | expression EQUAL expr
  103           | expression UNEQUAL expr
  104           | expr

  105 expr: expr PLUS term
  106     | expr MINUS term
  107     | expr OR term
  108     | term

  109 term: term MUL factor
  110     | term DIV factor
  111     | term MOD factor
  112     | term AND factor
  113     | factor

  114 factor: NAME
  115       | NAME LP args_list RP
  116       | SYS_FUNCT
  117       | SYS_FUNCT LP args_list RP
  118       | const_value
  119       | LP expression RP
  120       | NOT factor
  121       | MINUS factor
  122       | NAME LB expression RB
  123       | NAME DOT NAME

  124 args_list: args_list COMMA expression
  125          | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
NAME (258) 2 9 10 20 25 30 36 37 50 52 75 76 77 78 79 87 94 114 115
    122 123
LP (259) 26 53 79 81 82 115 117 119
RP (260) 26 53 79 81 82 115 117 119
LB (261) 31 76 122
RB (262) 31 76 122
DOT (263) 1 77 123
COMMA (264) 36 96 124
COLON (265) 35 42 50 57 64 93 94
MUL (266) 109
DIV (267) 110
UNEQUAL (268) 103
NOT (269) 120
PLUS (270) 105
MINUS (271) 28 29 106 121
GE (272) 98
GT (273) 99
LE (274) 100
LT (275) 101
EQUAL (276) 9 10 20 102
ASSIGN (277) 75 76 77 87
MOD (278) 111
DOTDOT (279) 27 28 29 30
SEMI (280) 2 9 10 20 35 42 49 51 55 62 93 94
AND (281) 112
ARRAY (282) 31
BEGIN_TOKEN (283) 61
CASE (284) 90
CONST (285) 7
DO (286) 86 87
DOWNTO (287) 89
ELSE (288) 84
END (289) 32 61 90
FOR (290) 87
FUNCTION (291) 50
GOTO (292) 95
IF (293) 83 84
OF (294) 31 90
OR (295) 107
PROCEDURE (296) 52
PROGRAM (297) 2
RECORD (298) 32
REPEAT (299) 85
THEN (300) 83 84
TO (301) 88
TYPE (302) 16
UNTIL (303) 85
VAR (304) 38 58
WHILE (305) 86
SYS_CON (306) 15
SYS_FUNCT (307) 116 117
SYS_PROC (308) 80 81
SYS_TYPE (309) 24
READ (310) 82
INTEGER (311) 11 64 95
CHAR (312) 13
REAL (313) 12
STRING (314) 14


Nonterminals, with rules where they appear

$accept (60)
    左： 0
program_stmt (61)
    左： 1, 右： 0
program_head (62)
    左： 2, 右： 1
routine (63)
    左： 3, 右： 1
sub_routine (64)
    左： 4, 右： 49 51
routine_head (65)
    左： 5, 右： 3 4
label_part (66)
    左： 6, 右： 5
const_part (67)
    左： 7 8, 右： 5
const_expr_list (68)
    左： 9 10, 右： 7 9
const_value (69)
    左： 11 12 13 14 15, 右： 9 10 27 28 29 93 118
type_part (70)
    左： 16 17, 右： 5
type_decl_list (71)
    左： 18 19, 右： 16 18
type_definition (72)
    左： 20, 右： 18 19
type_decl (73)
    左： 21 22 23, 右： 20 31 35 42
simple_type_decl (74)
    左： 24 25 26 27 28 29 30, 右： 21 31 50 57
array_type_decl (75)
    左： 31, 右： 22
record_type_decl (76)
    左： 32, 右： 23
field_decl_list (77)
    左： 33 34, 右： 32 33
field_decl (78)
    左： 35, 右： 33 34
name_list (79)
    左： 36 37, 右： 26 35 36 42 58 59
var_part (80)
    左： 38 39, 右： 5
var_decl_list (81)
    左： 40 41, 右： 38 40
var_decl (82)
    左： 42, 右： 40 41
routine_part (83)
    左： 43 44, 右： 5
routine_decl_list (84)
    左： 45 46 47 48, 右： 44 47 48
function_decl (85)
    左： 49, 右： 45 47
function_head (86)
    左： 50, 右： 49
procedure_decl (87)
    左： 51, 右： 46 48
procedure_head (88)
    左： 52, 右： 51
parameters (89)
    左： 53 54, 右： 50 52
para_decl_list (90)
    左： 55 56, 右： 53 55
para_type_list (91)
    左： 57, 右： 55 56
var_para_list (92)
    左： 58 59, 右： 57
routine_body (93)
    左： 60, 右： 3 4
compound_stmt (94)
    左： 61, 右： 60 68
stmt_list (95)
    左： 62 63, 右： 61 62 85
stmt (96)
    左： 64 65, 右： 62 83 84 86 87 93 94
non_label_stmt (97)
    左： 66 67 68 69 70 71 72 73 74, 右： 64 65
assign_stmt (98)
    左： 75 76 77, 右： 66
proc_stmt (99)
    左： 78 79 80 81 82, 右： 67
if_stmt (100)
    左： 83 84, 右： 69
repeat_stmt (101)
    左： 85, 右： 70
while_stmt (102)
    左： 86, 右： 71
for_stmt (103)
    左： 87, 右： 72
direction (104)
    左： 88 89, 右： 87
case_stmt (105)
    左： 90, 右： 73
case_expr_list (106)
    左： 91 92, 右： 90 91
case_expr (107)
    左： 93 94, 右： 91 92
goto_stmt (108)
    左： 95, 右： 74
expression_list (109)
    左： 96 97, 右： 81 96
expression (110)
    左： 98 99 100 101 102 103 104, 右： 75 76 77 83 84 85 86 87
    90 96 97 98 99 100 101 102 103 119 122 124 125
expr (111)
    左： 105 106 107 108, 右： 98 99 100 101 102 103 104 105 106
    107
term (112)
    左： 109 110 111 112 113, 右： 105 106 107 108 109 110 111
    112
factor (113)
    左： 114 115 116 117 118 119 120 121 122 123, 右： 82 109 110
    111 112 113 120 121
args_list (114)
    左： 124 125, 右： 79 115 117 124


State 0

    0 $accept: . program_stmt $end

    PROGRAM  shift, and go to state 1

    program_stmt  转到状态 2
    program_head  转到状态 3


State 1

    2 program_head: PROGRAM . NAME SEMI

    NAME  shift, and go to state 4


State 2

    0 $accept: program_stmt . $end

    $end  shift, and go to state 5


State 3

    1 program_stmt: program_head . routine DOT

    $default  reduce using rule 6 (label_part)

    routine       转到状态 6
    routine_head  转到状态 7
    label_part    转到状态 8


State 4

    2 program_head: PROGRAM NAME . SEMI

    SEMI  shift, and go to state 9


State 5

    0 $accept: program_stmt $end .

    $default  接受


State 6

    1 program_stmt: program_head routine . DOT

    DOT  shift, and go to state 10


State 7

    3 routine: routine_head . routine_body

    BEGIN_TOKEN  shift, and go to state 11

    routine_body   转到状态 12
    compound_stmt  转到状态 13


State 8

    5 routine_head: label_part . const_part type_part var_part routine_part

    CONST  shift, and go to state 14

    $default  reduce using rule 8 (const_part)

    const_part  转到状态 15


State 9

    2 program_head: PROGRAM NAME SEMI .

    $default  reduce using rule 2 (program_head)


State 10

    1 program_stmt: program_head routine DOT .

    $default  reduce using rule 1 (program_stmt)


State 11

   61 compound_stmt: BEGIN_TOKEN . stmt_list END

    $default  reduce using rule 63 (stmt_list)

    stmt_list  转到状态 16


State 12

    3 routine: routine_head routine_body .

    $default  reduce using rule 3 (routine)


State 13

   60 routine_body: compound_stmt .

    $default  reduce using rule 60 (routine_body)


State 14

    7 const_part: CONST . const_expr_list

    NAME  shift, and go to state 17

    const_expr_list  转到状态 18


State 15

    5 routine_head: label_part const_part . type_part var_part routine_part

    TYPE  shift, and go to state 19

    $default  reduce using rule 17 (type_part)

    type_part  转到状态 20


State 16

   61 compound_stmt: BEGIN_TOKEN stmt_list . END
   62 stmt_list: stmt_list . stmt SEMI

    NAME         shift, and go to state 21
    BEGIN_TOKEN  shift, and go to state 11
    CASE         shift, and go to state 22
    END          shift, and go to state 23
    FOR          shift, and go to state 24
    GOTO         shift, and go to state 25
    IF           shift, and go to state 26
    REPEAT       shift, and go to state 27
    WHILE        shift, and go to state 28
    SYS_PROC     shift, and go to state 29
    READ         shift, and go to state 30
    INTEGER      shift, and go to state 31

    compound_stmt   转到状态 32
    stmt            转到状态 33
    non_label_stmt  转到状态 34
    assign_stmt     转到状态 35
    proc_stmt       转到状态 36
    if_stmt         转到状态 37
    repeat_stmt     转到状态 38
    while_stmt      转到状态 39
    for_stmt        转到状态 40
    case_stmt       转到状态 41
    goto_stmt       转到状态 42


State 17

   10 const_expr_list: NAME . EQUAL const_value SEMI

    EQUAL  shift, and go to state 43


State 18

    7 const_part: CONST const_expr_list .
    9 const_expr_list: const_expr_list . NAME EQUAL const_value SEMI

    NAME  shift, and go to state 44

    $default  reduce using rule 7 (const_part)


State 19

   16 type_part: TYPE . type_decl_list

    NAME  shift, and go to state 45

    type_decl_list   转到状态 46
    type_definition  转到状态 47


State 20

    5 routine_head: label_part const_part type_part . var_part routine_part

    VAR  shift, and go to state 48

    $default  reduce using rule 39 (var_part)

    var_part  转到状态 49


State 21

   75 assign_stmt: NAME . ASSIGN expression
   76            | NAME . LB expression RB ASSIGN expression
   77            | NAME . DOT NAME ASSIGN expression
   78 proc_stmt: NAME .
   79          | NAME . LP args_list RP

    LP      shift, and go to state 50
    LB      shift, and go to state 51
    DOT     shift, and go to state 52
    ASSIGN  shift, and go to state 53

    $default  reduce using rule 78 (proc_stmt)


State 22

   90 case_stmt: CASE . expression OF case_expr_list END

    NAME       shift, and go to state 54
    LP         shift, and go to state 55
    NOT        shift, and go to state 56
    MINUS      shift, and go to state 57
    SYS_CON    shift, and go to state 58
    SYS_FUNCT  shift, and go to state 59
    INTEGER    shift, and go to state 60
    CHAR       shift, and go to state 61
    REAL       shift, and go to state 62
    STRING     shift, and go to state 63

    const_value  转到状态 64
    expression   转到状态 65
    expr         转到状态 66
    term         转到状态 67
    factor       转到状态 68


State 23

   61 compound_stmt: BEGIN_TOKEN stmt_list END .

    $default  reduce using rule 61 (compound_stmt)


State 24

   87 for_stmt: FOR . NAME ASSIGN expression direction expression DO stmt

    NAME  shift, and go to state 69


State 25

   95 goto_stmt: GOTO . INTEGER

    INTEGER  shift, and go to state 70


State 26

   83 if_stmt: IF . expression THEN stmt
   84        | IF . expression THEN stmt ELSE stmt

    NAME       shift, and go to state 54
    LP         shift, and go to state 55
    NOT        shift, and go to state 56
    MINUS      shift, and go to state 57
    SYS_CON    shift, and go to state 58
    SYS_FUNCT  shift, and go to state 59
    INTEGER    shift, and go to state 60
    CHAR       shift, and go to state 61
    REAL       shift, and go to state 62
    STRING     shift, and go to state 63

    const_value  转到状态 64
    expression   转到状态 71
    expr         转到状态 66
    term         转到状态 67
    factor       转到状态 68


State 27

   85 repeat_stmt: REPEAT . stmt_list UNTIL expression

    $default  reduce using rule 63 (stmt_list)

    stmt_list  转到状态 72


State 28

   86 while_stmt: WHILE . expression DO stmt
